# own_blockchain

./: CMakeLists.txt
include/core/: block.h  blockchain.h
src/: main.cpp
src/core/: block.cpp  blockchain.cpp
